# HypothesisAI

./: .gitignore  Makefile  README.md
backend/: .env.example  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
backend/.sandbox/: api_test.ipynb  exhaustive_schema.py  orchestrator-implementation.py  test_arxiv_integration.py  test_multi_strategy.py
backend/app/agents/: __init__.py  base.py  hypothesis_generator.py  knowledge_synthesizer.py  literature_hunter.py  methodology_designer.py  orchestrator.py  supervisor.py  validation_agent.py
backend/app/agents/prompts/: __init__.py  prompt_manager.py  research_prompts.yaml
backend/app/core/: llm_clients.py  research_interface.py  state_management.py  workflow.py
backend/app/schemas/: hypothesis.py  state.py  synthesis.py
backend/app/state/: __init__.py  enums.py  papers.py  validation.py
backend/examples/: cli_research.py
backend/src/agent/: configuration.py  graph.py  prompts.py  state.py  tools_and_schemas.py  utils.py  workflow_utils.py
backend/src/agent/tools/: __init__.py  preprint_apis.py
docs/: agent-architecture.md  design_document.md  literature_hunter_api.md  paper_fetch_strategy.md  project-directory-structure.md  project_plan.md  requirements_specification.md  resource_allocation_plan.md  risk_analysis_report.md  scalability-guide.md  scope_document.md  supervisor-agent-explanation.md  system-doc.md  technical_roadmap.md
frontend/: .env.example  .eslintrc.json
scripts/: create_admin.py
