[project]
name = "agent"
version = "0.0.1"
description = "Backend for the LangGraph agent"
authors = [
    { name = "Vivek Ramakrishnan", email = "vrkay08@gmail.com" },
]
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11,<4.0"
dependencies = [
    "langgraph>=0.6.4",
    "langchain>=0.3.27",
    "langchain-google-genai>=2.1.9",
    "langchain-anthropic>=0.3.18",
    "langchain-openai>=0.3.29",
    "python-dotenv>=1.1.1",
    "langgraph-sdk>=0.1.57",
    "langgraph-cli",
    "langgraph-api",
    "fastapi>=0.116.1",
    "google-genai",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "uvicorn[standard]>=0.35.0",
    "sqlalchemy>=2.0.42",
    "alembic>=1.16.4",
    "psycopg2-binary>=2.9.10",
    "redis>=6.4.0",
    "qdrant-client>=1.15.1",
    "python-jose[cryptography]>=3.5.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.20",
    "celery>=5.5.3",
    "flower>=2.0.1",
    "arxiv>=2.2.0",
    "biopython>=1.85",
    "requests>=2.32.4",
    "httpx>=0.28.1",
    "python-json-logger>=3.3.0",
    "tenacity>=9.1.2",
    "prometheus-client>=0.22.1",
    "opentelemetry-api>=1.36.0",
    "opentelemetry-sdk>=1.36.0",
    "opentelemetry-instrumentation-fastapi>=0.57b0",
]

[project.optional-dependencies]
dev = ["mypy>=1.17.1", "ruff>=0.6.1", "pytest>=8.4.1", "black>=25.1.0"]

[build-system]
requires = ["setuptools>=80.9.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
lint.select = [
    "E",    # pycodestyle
    "F",    # pyflakes
    "I",    # isort
    "D",    # pydocstyle
    "D401", # First line should be in imperative mood
    "T201",
    "UP",
]
lint.ignore = [
    "UP006",
    "UP007",
    # We actually do want to import from typing_extensions
    "UP035",
    # Relax the convention by _not_ requiring documentation for every function parameter.
    "D417",
    "E501",
]
[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "UP"]
[tool.ruff.lint.pydocstyle]
convention = "google"

[dependency-groups]
dev = [
    "langgraph-cli[inmem]>=0.1.71",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=6.2.1",
    "pytest-mock>=3.14.1",
    "factory-boy>=3.3.3",
    "faker>=37.5.3",
]
